fix: wrong class name of grid-keep-ratio-wrap

--- a/assets/style/all.scss
+++ b/assets/style/all.scss
@@ -204,7 +204,7 @@ h1 {
             flex-direction: column;
         }
 
-        .keep-ratio-wrap {
+        .grid-keep-ratio-wrap {
             width: 100%;
             padding-bottom: 100%; 
             margin-bottom: 8px;       
